--- a/teaching.bib
+++ b/teaching.bib
@@ -1,13 +1,254 @@
 %% This BibTeX bibliography file was created using BibDesk.
-%% http://bibdesk.sourceforge.net/
+%% https://bibdesk.sourceforge.io/
 
-
-%% Created for Jeff Erickson at 2023-11-01 12:46:17 -0500 
+%% Created for Jeff Erickson at 2025-03-26 17:32:58 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{mfdww-cmtpc-22,
+	abstract = {There has been significant growth in the literature base exploring questions of teaching in undergraduate mathematics. In this paper we synthesize the literature on the teaching of proof-based undergraduate mathematics, drawing on 104 published reports from a range of countries and research traditions. We primarily differentiate the papers into those which explore lecture-based pedagogy and student-centered pedagogy. For each type of instruction, we focus on three categories of findings from the literature: description of instruction, instructor beliefs and rationales, and the relationship between instruction and students (cognitive, participatory, affective, and equity oriented). Much is known about the enactment of lecture-based teaching, including instructors' cognitive and affective goals. The student-centered literature focuses on tensions and challenges implementing curricula with a greater focus on participatory goals. Overall, there are few studies that attempt to link instructors' classroom activity and students' learning. Similarly, attention to equity is relatively lacking in the extant research.},
+	author = {Melhuish, Kathleen and Fukawa-Connelly, Timothy and Dawkins, Paul C. and Woods, Christian and Weber, Keith},
+	date-added = {2025-03-26 17:32:26 -0500},
+	date-modified = {2025-03-26 17:32:53 -0500},
+	doi = {10.1016/j.jmathb.2022.100986},
+	journal = {J. Math. Behavior},
+	keywords = {Advanced mathematics, Instruction, Teaching, Lecture, Proof, Inquiry},
+	pages = {100986},
+	title = {Collegiate mathematics teaching in proof-based courses: {What} we now know and what we have yet to learn},
+	volume = {67},
+	year = {2022}}
+
+@article{ssh-cmtup-10,
+	abstract = {Though written accounts of collegiate mathematics teaching exist (e.g., mathematicians' reflections and analyses of learning and teaching in innovative courses), research on collegiate teachers' actual classroom teaching practice is virtually non-existent. We advance this claim based on a thorough review of peer-reviewed journals where scholarship on collegiate mathematics teaching is published. To frame this review, we distinguish between instructional activities and teaching practice and present six categories of published scholarship that consider collegiate teaching but are not descriptive empirical research on teaching practice. Empirical studies can reveal important differences among teachers' thinking and actions, promote discussions of practice, and support learning about teaching. To support such research, we developed a preliminary framework of cognitively oriented dimensions of teaching practice based on our review of empirical research on pre-college and college teaching.},
+	author = {Speer, Natasha M. and Smith, John P. and Horvath, Aladar},
+	date-added = {2025-03-26 17:31:36 -0500},
+	date-modified = {2025-03-26 17:32:00 -0500},
+	doi = {10.1016/j.jmathb.2010.02.001},
+	journal = {J. Math. Behavior},
+	keywords = {Collegiate mathematics, Teaching practice},
+	number = {2},
+	pages = {99--114},
+	title = {Collegiate mathematics teaching: {An} unexamined practice},
+	volume = {29},
+	year = {2010}}
+
+@inbook{dm-actlu-01,
+	abstract = {In this paper, we have mentioned six ways in which a theory can contribute to research and we suggest that this list can be used as criteria for evaluating a theory. We have described how one such perspective, APOS Theory, is being used in an organized way by members of RUMEC and others to conduct research and develop curriculum. We have shown how observing students' success in making or not making mental constructions proposed by the theory and using such observations to analyze data can organize our thinking about learning mathematical concepts, provide explanations of student difficulties and predict success or failure in understanding a mathematical concept. There is a wide range of mathematical concepts to which APOS Theory can and has been applied and this theory is used as a language for communication of ideas about learning. We have also seen how the theory is grounded in data, and has been used as a vehicle for building a community of researchers. Yet its use is not restricted to members of that community. Finally, we point to an annotated bibliography (McDonald, 2000), which presents further details about this theory and its use in research in undergraduate mathematics education.},
+	address = {Dordrecht},
+	author = {Dubinsky, Ed and Mcdonald, Michael A.},
+	booktitle = {The Teaching and Learning of Mathematics at University Level: An ICMI Study},
+	date-added = {2025-03-26 17:30:44 -0500},
+	date-modified = {2025-03-26 17:31:14 -0500},
+	doi = {10.1007/0-306-47231-7_25},
+	editor = {Holton, Derek and Artigue, Mich{\`e}le and Kirchgr{\"a}ber, Urs and Hillel, Joel and Niss, Mogens and Schoenfeld, Alan},
+	pages = {275--282},
+	publisher = {Springer Netherlands},
+	title = {{APOS:} {A} Constructivist Theory of Learning in Undergraduate Mathematics Education Research},
+	year = {2001},
+	bdsk-url-1 = {https://doi.org/10.1007/0-306-47231-7_25}}
+
+@phdthesis{e-dttcs-14,
+	address = {Stockholm},
+	author = {Enstr{\"o}m, Emma},
+	date-added = {2025-01-29 18:26:15 -0600},
+	date-modified = {2025-01-29 18:27:30 -0600},
+	school = {KTH Royal Inst. Tech.},
+	title = {On Difficult Topics in Theoretical Computer Science Education},
+	url = {https://urn.kb.se/resolve?urn=urn:nbn:se:kth:diva-152357},
+	year = {2014},
+	bdsk-url-1 = {https://urn.kb.se/resolve?urn=urn:nbn:se:kth:diva-152357}}
+
+@article{ss-brci-17,
+	author = {Hamouda, Sally and Edwards, Stephen H. and Elmongui, Hicham G. and Ernst, Jeremy V. and Shaffer, Clifford A.},
+	date-added = {2025-01-29 18:17:04 -0600},
+	date-modified = {2025-01-29 18:17:29 -0600},
+	doi = {10.1080/08993408.2017.1414728},
+	journal = {Comput. Sci. Educ.},
+	number = {2},
+	pages = {121--148},
+	title = {A basic recursion concept inventory},
+	volume = {27},
+	year = {2017},
+	bdsk-url-1 = {https://doi.org/10.1080/08993408.2017.1414728}}
+
+@article{ahhhm-cicst-06b,
+	abstract = {This report describes concept inventories, specialized assessment instruments that enable educational researchers to investigate student (mis)understandings of concepts in a particular domain. While students experience a concept inventory as a set of multiple-choice items taken as a test, this belies its purpose, its careful development, and its validation. A concept inventory is not intended to be a comprehensive instrument, but rather a tool that probes student comprehension of a carefully selected subset of concepts that give rise to the most common and pervasive mismodelings. The report explains how concept inventories have been developed and used in other STEM fields, then outlines a project to explore the feasibility of concept inventories in the computing field. We use the domain of discrete mathematics to illustrate a suggested plan of action.},
+	author = {Almstrum, Vicki L. and Henderson, Peter B. and Harvey, Valerie and Heeren, Cinda and Marion, William and Riedesel, Charles and Soh, Leen-Kiat and Tew, Allison Elliott},
+	date-added = {2025-01-29 18:13:18 -0600},
+	date-modified = {2025-01-29 18:14:55 -0600},
+	doi = {10.1145/1189136.1189182},
+	journal = {SIGCSE Bull.},
+	keywords = {assessment, assessment tools, concept inventory, discrete mathematics, distractors, misconceptions},
+	number = {4},
+	pages = {132--145},
+	title = {Concept inventories in computer science for the topic discrete mathematics},
+	volume = {38},
+	year = {2006},
+	bdsk-url-1 = {https://doi.org/10.1145/1189136.1189182}}
+
+@inproceedings{ahhhm-cicst-06a,
+	abstract = {This report describes concept inventories, specialized assessment instruments that enable educational researchers to investigate student (mis)understandings of concepts in a particular domain. While students experience a concept inventory as a set of multiple-choice items taken as a test, this belies its purpose, its careful development, and its validation. A concept inventory is not intended to be a comprehensive instrument, but rather a tool that probes student comprehension of a carefully selected subset of concepts that give rise to the most common and pervasive mismodelings. The report explains how concept inventories have been developed and used in other STEM fields, then outlines a project to explore the feasibility of concept inventories in the computing field. We use the domain of discrete mathematics to illustrate a suggested plan of action.},
+	author = {Almstrum, Vicki L. and Henderson, Peter B. and Harvey, Valerie and Heeren, Cinda and Marion, William and Riedesel, Charles and Soh, Leen-Kiat and Tew, Allison Elliott},
+	booktitle = {Working Group Rep. Innovation Tech, Comput. Sci. Educ. (ITiCSE)},
+	date-added = {2025-01-29 18:13:18 -0600},
+	date-modified = {2025-01-29 18:14:50 -0600},
+	doi = {10.1145/1189215.1189182},
+	keywords = {assessment, assessment tools, concept inventory, discrete mathematics, distractors, misconceptions},
+	pages = {132--145},
+	title = {Concept inventories in computer science for the topic discrete mathematics},
+	year = {2006},
+	bdsk-url-1 = {https://doi.org/10.1145/1189215.1189182}}
+
+@article{wkhn-idtec-23,
+	abstract = {Almost every computer science program contains two semester-long introductory courses, usually named Computer Science 1 (CS1) and Computer Science 2 (CS2). They have been a mandatory element of the ACM Computing Curriculum for nearly fifty years and are likely to remain so for many years to come. While there seems to be a broad agreement on the key elements of CS1, the curriculum for CS2 can vary significantly between institutions. What material should in fact be included in CS2? Ideally, an educator would want to cover the topics that students need to master in order to successfully learn other topics further in the course and in the subsequent courses in the curriculum (important topics). They would also want to concentrate on topics that students are likely to struggle with and take a longer time to understand (difficult topics). This paper details the process and results of a multi-year international study that examined the topics of difficulty and importance in CS2 using Delphi method (an iterative process for reaching consensus among a group of subject experts that allows the participants to reconsider their opinions based on the anonymized responses of the other experts in the group provided at preceding iterations). We present four topic sets aiming to inform the choice of topics for designing a CS2 course or exam. The first set contains the topics selected based on importance and indicates what topics should be included in a CS2 course or its textbook. The second and third sets of topics are based on both importance and difficulty and as such would be a guide for the creation of exams and concept inventories. The fourth set contains the topics that none of the faculty experts marked as either important or difficult, making them candidates for delegation to a different course, exclusion, or leaving them for self-study. We also provide a comparison with other published topic sets for CS2.},
+	author = {Wittie, Lea and Kurdia, Anastasia and Huggard, Meriel and Nguyen, Nguyen},
+	date-added = {2025-01-29 18:06:47 -0600},
+	date-modified = {2025-01-29 18:08:27 -0600},
+	doi = {https://doi.org/10.18260/1-2--43574},
+	journal = {Proc. ASEE Ann. Conf. Expo.},
+	publisher = {American Society for Engineering Education},
+	title = {Important and Difficult Topics in CS2: An Expert Consensus via Delphi Study},
+	year = {2023},
+	bdsk-url-1 = {https://doi.org/10.18260/1-2--43574}}
+
+@inproceedings{gghhk-iidci-08a,
+	abstract = {A Delphi process is a structured multi-step process that uses a group of experts to achieve a consensus opinion. We present the results of three Delphi processes to identify topics that are important and difficult in each of three introductory computing subjects: discrete math, programming fundamentals, and logic design. The topic rankings can be used to guide both the coverage of standardized tests of student learning (i.e., concept inventories) and can be used by instructors to identify what topics merit emphasis.},
+	author = {Goldman, Ken and Gross, Paul and Heeren, Cinda and Herman, Geoffrey and Kaczmarczyk, Lisa and Loui, Michael C. and Zilles, Craig},
+	booktitle = {Proc. 39th SIGCSE Tech. Symp. Comput. Sci. Educ.},
+	date-added = {2025-01-29 18:02:07 -0600},
+	date-modified = {2025-01-29 18:03:43 -0600},
+	doi = {10.1145/1352135.1352226},
+	keywords = {programming fundamentals, logic design, discrete math, delphi, curriculum, concept inventory},
+	pages = {256--260},
+	title = {Identifying important and difficult concepts in introductory computing courses using a delphi process},
+	year = {2008},
+	bdsk-url-1 = {https://doi.org/10.1145/1352135.1352226}}
+
+@article{gghhk-iidci-08b,
+	abstract = {A Delphi process is a structured multi-step process that uses a group of experts to achieve a consensus opinion. We present the results of three Delphi processes to identify topics that are important and difficult in each of three introductory computing subjects: discrete math, programming fundamentals, and logic design. The topic rankings can be used to guide both the coverage of standardized tests of student learning (i.e., concept inventories) and can be used by instructors to identify what topics merit emphasis.},
+	author = {Goldman, Ken and Gross, Paul and Heeren, Cinda and Herman, Geoffrey and Kaczmarczyk, Lisa and Loui, Michael C. and Zilles, Craig},
+	date-added = {2025-01-29 18:02:07 -0600},
+	date-modified = {2025-01-29 18:03:46 -0600},
+	doi = {10.1145/1352322.1352226},
+	journal = {SIGCSE Bull.},
+	number = {1},
+	pages = {256--260},
+	title = {Identifying important and difficult concepts in introductory computing courses using a delphi process},
+	volume = {40},
+	year = {2008},
+	bdsk-url-1 = {https://doi.org/10.1145/1352322.1352226}}
+
+@inproceedings{r-dpsas-24,
+	arxiv = {2311.12365},
+	author = {van Renssen, Andr{\'e}},
+	booktitle = {Proc. 26th Australasian Comptu. Educ. Conf. {ACE}},
+	date-added = {2025-01-29 17:59:02 -0600},
+	date-modified = {2025-01-29 18:00:51 -0600},
+	doi = {10.1145/3636243.3636261},
+	editor = {Herbert, Nicole and Seton, Carolyn},
+	pages = {164--171},
+	title = {Designing Problem Sessions for Algorithmic Subjects to Boost Student Confidence},
+	year = {2024},
+	bdsk-url-1 = {https://doi.org/10.1145/3636243.3636261}}
+
+@article{rm-tlrpr-15,
+	author = {McCauley, Ren{\'e}e and Grissom, Scott and Fitzgerald, Sue and Murphy, Laurie},
+	date-added = {2025-01-29 17:56:25 -0600},
+	date-modified = {2025-01-29 18:18:29 -0600},
+	doi = {10.1080/08993408.2015.1033205},
+	journal = {Comput. Sci. Educ.},
+	number = {1},
+	pages = {37--66},
+	title = {Teaching and learning recursive programming: {A} review of the research literature},
+	volume = {25},
+	year = {2015},
+	bdsk-url-1 = {https://doi.org/10.1080/08993408.2015.1033205}}
+
+@article{mprn-ussmp-19,
+	abstract = {Graphs can be considered as useful mathematical models. Graph algorithms are a common part of undergraduate courses in discrete mathematics. Even though they have been successfully implemented in secondary curricula, little research has been dedicated to the analysis of students' work. Within a discrete mathematics course for university students, several graph algorithms were introduced via their applications. At the end of the course, the students took a test focused, inter alia, on applications of the algorithms. The mistakes that occurred in 127 students' solutions of three problems (the Chinese postman problem, the shortest path problem, and the minimum spanning tree problem) were categorized and compared. Surprisingly, no mistakes were identified in the mathematization of situations or in the interpretation of results with respect to the wording of the problem. The categories of errors varied regardless of the problem types. Hierarchical cluster analysis grouped together the students' solutions for the Chinese postman problem and the minimum spanning tree problem. By means of nonparametric item response theory analysis, the Chinese postman problem was identified as the most problematic for students. Possible sources of this difficulty are discussed in more detail herein.},
+	author = {Medov{\'a}, Janka and P{\'a}len{\'\i}kov{\'a}, Kitti and Rybansk{\'y}, {\v L}ubom{\'\i}r and Na{\v s}tick{\'a}, Zuzana},
+	date-added = {2025-01-29 17:51:06 -0600},
+	date-modified = {2025-01-29 17:52:18 -0600},
+	doi = {10.3390/math7070572},
+	journal = {Mathematics},
+	number = {7},
+	pages = {572},
+	title = {Undergraduate Students' Solutions of Modeling Problems in Algorithmic Graph Theory},
+	volume = {7},
+	year = {2019},
+	bdsk-url-1 = {https://www.mdpi.com/2227-7390/7/7/572},
+	bdsk-url-2 = {https://doi.org/10.3390/math7070572}}
+
+@inproceedings{ffhks-idtds-16,
+	author = {Fouh, Eric and Farghally, Mohammed F. and Hamouda, Sally and Koh, Kyu Han and Shaffer, Clifford A.},
+	booktitle = {Proc. 9th Int. Conf. Educ. Data Mining, {EDM}},
+	date-added = {2025-01-29 17:47:50 -0600},
+	date-modified = {2025-01-29 17:48:29 -0600},
+	pages = {370--375},
+	title = {Investigating Difficult Topics in a Data Structures Course Using Item Response Theory and Logged Data Analysis},
+	url = {http://www.educationaldatamining.org/EDM2016/proceedings/paper\_31.pdf},
+	year = {2016},
+	bdsk-url-1 = {http://www.educationaldatamining.org/EDM2016/proceedings/paper%5C_31.pdf}}
+
+@article{ek-iiwmd-17,
+	abstract = {When compared to earlier programming and data structure experiences that our students might have, the perspective changes on computers and programming when introducing theoretical computer science into the picture. Underlying computational models need to be addressed, and mathematical tools employed, to understand the quality criteria of theoretical computer science. Focus shifts from doing to proving. Over several years, we have tried to make this perspective transition smoother for the students of a third-year mandatory algorithms, data structures, and computational complexity course. The concepts receiving extra attention in this work are NP-completeness, one of the most central concepts in computer science, and dynamic programming, an algorithm construction method that is powerful but somewhat unintuitive for some students.The major difficulties that we attribute to NP-completeness are that the tasks look similar but have a different purpose than in algorithm construction exercises. Students do not immediately see the usefulness of the concept, and hence motivation could be one issue. One line of attacking NP-completeness has been to emphasize its algorithmic aspects using typical tools for teaching algorithms.Some potential difficulties associated with dynamic programming are that the method is based on a known difficult concept---recursion---and that there are many ingredients in a dynamic programming solution to a problem.For both dynamic programming and NP-completeness, we have invented several new activities and structured the teaching differently, forcing students to think and adopt a standpoint, and practice the concepts in programming assignments. Student surveys show that these activities are appreciated by the students, and our evaluations indicate that they have positive effects on learning. We believe that these activities could be useful in any similar course.The approach to improving the course is action research, and the evaluation has been done using course surveys, self-efficacy surveys, rubrics-like grading protocols, and grades. We have also interviewed teaching assistants about their experiences.},
+	author = {Enstr\"{o}m, Emma and Kann, Viggo},
+	date-added = {2025-01-29 17:28:42 -0600},
+	date-modified = {2025-01-29 17:29:09 -0600},
+	doi = {10.1145/3018109},
+	journal = {ACM Trans. Comput. Educ.},
+	keywords = {Algorithm visualization, NP-completeness, assessment, dynamic programming, pattern-oriented instruction, proofs, self-efficacy},
+	number = {1},
+	title = {Iteratively Intervening with the ``Most Difficult'' Topics of an Algorithms and Complexity Course},
+	volume = {17},
+	year = {2017},
+	bdsk-url-1 = {https://doi.org/10.1145/3018109}}
+
+@article{ha-cbctd-02,
+	abstract = {Recursion is a central concept in computer science, yet it is a very difficult concept for beginners to learn. In this paper we focus on a specific aspect of comprehending recursion - the conception of the base case as an integral component of a recursive algorithm. We found that students have difficulties in identifying base cases: they handle redundant base cases; ignore boundary values and degenerated cases; avoid out-of-range values; and may even not define any base cases when formulating recursive algorithms. We also found that students have difficulties in evaluating recursive algorithms that deal with imperceptible base cases. We suggest that teachers should make a special effort to discuss different aspects of the base case concept. Emphasis should be put on both declarative and procedural aspects of categorizing and handling base cases as part of recursion formulation.},
+	author = {Haberman, Bruria and Averbuch, Haim},
+	date-added = {2025-01-29 17:18:48 -0600},
+	date-modified = {2025-01-29 17:19:14 -0600},
+	doi = {10.1145/637610.544441},
+	journal = {SIGCSE Bull.},
+	keywords = {recursion formulation, recursion evaluation, base case},
+	number = {3},
+	pages = {84---88},
+	title = {The case of base cases: why are they so difficult to recognize? student difficulties with recursion},
+	volume = {34},
+	year = {2002},
+	bdsk-url-1 = {https://doi.org/10.1145/637610.544441}}
+
+@inproceedings{w-uagna-23,
+	abstract = {We implemented a standards-based grading scheme in an upperdivision course on algorithm design taken by non-CS-majors. The alternate grading system allows students to submit multiple attempts at the same algorithm design problem, while managing grading load by replacing standard point-based scales with a 4- possibility-scale for all problems. The simplified grading system created flexibility in the course structure that allowed us to give students more problems each week than we expected them to complete, covering different aspects of the given topics (e.g., both theoretical and practical approaches to algorithm design). The additional problems allowed for students with different goals and backgrounds to choose different problems and tailor it to their needs. The availability of resubmissions created incentives for students to master difficult topics throughout the term without a final exam. We argue that the simplified grading system is particularly well-suited to courses in algorithm design and courses for students with varying backgrounds and goals.},
+	author = {Weber, Robbie},
+	booktitle = {Proc. 54th ACM Tech, Symp. Comput, Sci. Educ. (SIGCSE)},
+	date-added = {2025-01-29 17:16:54 -0600},
+	date-modified = {2025-01-29 17:17:38 -0600},
+	doi = {10.1145/3545945.3569765},
+	keywords = {algorithms, assessment, experience report, mastery grading, non-majors, standards-based grading},
+	pages = {638---644},
+	title = {Using Alternative Grading in a Non-Major Algorithms Course},
+	volume = {1},
+	year = {2023},
+	bdsk-url-1 = {https://doi.org/10.1145/3545945.3569765}}
+
+@inproceedings{tssk-sswcd-24,
+	abstract = {Teachers who are aware of potential student misconceptions teach better than teachers who do not. In this article, we focus on misconceptions in the context of teaching and learning graph algorithms: we seek to discover student misconceptions about Dijkstra's shortest-path algorithm and related concepts. We observed and interviewed fourteen students who worked on a visual simulation task involving the algorithm; we qualitatively analyzed these data to explore the students' mistakes and their underlying reasons. We find, among other things, that students conflate concepts such as spanning tree, fringe, and priority queue and that students may neglect the greedy and dynamic-programming aspects of the algorithm; we also identify usability issues in the visualization tool we employed. These findings suggest that teachers and tool designers need to take great care to help students tease apart the key concepts in graph algorithms.},
+	author = {Tilanter\"{a}, Artturi and Sorva, Juha and Sepp\"{a}l\"{a}, Otto and Korhonen, Ari},
+	booktitle = {Proc. 20th Ann. ACM Conf. Int. Comput. Educ. Res. (ICER)},
+	date-added = {2025-01-29 17:06:39 -0600},
+	date-modified = {2025-01-29 17:09:18 -0600},
+	doi = {10.1145/3632620.3671096},
+	keywords = {Dijkstra's algorithm, algorithm visualization, algorithms, data structures, misconceptions},
+	pages = {154--165},
+	title = {Students Struggle with Concepts in Dijkstra's Algorithm},
+	volume = {1},
+	year = {2024},
+	bdsk-url-1 = {https://doi.org/10.1145/3632620.3671096}}
 
 @inproceedings{exrdg-asetcs-23,
 	author = {Erickson, Jeff and Xia, Jason and Robson, Eliot Wong and Do, Tue and Glickman, Aidan and Jia, Zhuofan and Jin, Eric and Lee, Jiwon and Lin, Patrick and Pan, Steven and Ruggerio, Samuel and Sakurayama, Tomoko and Yin, Andrew and Gertner, Yael and Solomon, Brad},
@@ -445,7 +686,7 @@
 	author = {Danielsiek, Holger and Paul, Wolfgang and Vahrenhold, Jan},
 	booktitle = {Proc. 43rd ACM Technical Symposium on Computer Science Education (SIGSCE)},
 	date-added = {2023-02-26 12:31:33 -0600},
-	date-modified = {2023-02-26 12:32:15 -0600},
+	date-modified = {2025-01-29 18:12:10 -0600},
 	doi = {10.1145/2157136.2157148},
 	keywords = {concept inventories, misconceptions, CS1/2},
 	pages = {21--26},
