--- a/topology.bib
+++ b/topology.bib
@@ -1,18 +1,366 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Jeff Erickson at 2024-12-02 22:05:29 -0600 
+%% Created for Jeff Erickson at 2025-04-01 14:20:00 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
-@inproceedings{DBLP:conf/wea/AleardiDF18,
+@article{vgohr-sfasc-20,
+	author = {Virtanen, Pauli and Gommers, Ralf and Oliphant, Travis E. and Haberland, Matt and Reddy, Tyler and Cournapeau, David and Burovski, Evgeni and Peterson, Pearu and Weckesser, Warren and Bright, Jonathan and {van der Walt}, St{\'e}fan J. and Brett, Matthew and Wilson, Joshua and Millman, K. Jarrod and Mayorov, Nikolay and Nelson, Andrew R. J. and Jones, Eric and Kern, Robert and Larson, Eric and Carey, C J and Polat, {\.I}lhan and Feng, Yu and Moore, Eric W. and {VanderPlas}, Jake and Laxalde, Denis and Perktold, Josef and Cimrman, Robert and Henriksen, Ian and Quintero, E. A. and Harris, Charles R. and Archibald, Anne M. and Ribeiro, Ant{\^o}nio H. and Pedregosa, Fabian and {van Mulbregt}, Paul and {SciPy 1.0 Contributors}},
+	date-added = {2025-03-31 14:03:07 -0500},
+	date-modified = {2025-03-31 14:20:42 -0500},
+	doi = {10.1038/s41592-019-0686-2},
+	journal = {Nature Methods},
+	pages = {261--272},
+	title = {{SciPy} 1.0: {Fundamental} Algorithms for Scientific Computing in Python},
+	volume = {17},
+	year = {2020},
+	bdsk-url-1 = {https://doi.org/10.1038/s41592-019-0686-2}}
+
+@article{am-emppc-40,
+	author = {Adkisson, Virgil W. and {Mac Lane}, Saunders},
+	comments = {Two spherical graph embeddings are homeomorphic iff they induce the same rotation system. Similarly for planar embeddings with the same outer face.},
+	date-added = {2025-03-31 12:44:46 -0500},
+	date-modified = {2025-03-31 12:48:51 -0500},
+	doi = {10.1215/S0012-7094-40-00616-0},
+	journal = {Duke Math. J.},
+	keywords = {sphere, rotation system},
+	number = {1},
+	pages = {216--228},
+	title = {Extending maps of plane {Peano} continua},
+	volume = {6},
+	year = {1940},
+	bdsk-url-1 = {https://doi.org/10.1215/S0012-7094-40-00616-0}}
+
+@article{d-npf-59,
+	author = {Davis, C.},
+	comments = {No online version available. Need to find paper copy!},
+	date-added = {2025-03-31 12:11:09 -0500},
+	date-modified = {2025-03-31 12:11:58 -0500},
+	journal = {Scripta Math.},
+	pages = {219--228},
+	title = {The set of non-linearity of a piecewise-linear function},
+	volume = {24},
+	year = {1959}}
+
+@article{b-sln2ir-87,
+	abstract = {Let K ⊂ R2 be a finitely triangulated 2-disk; a map ƒ:K → R2 is called simplexwise linear (SL) if f|σ is affine linear for each (closed) 2-simplex σ of K. Let L(K) = {SL homeomorphisms K → K fixing ∂K pointwise}, let L(K) denote its closure in the space of all SL maps K → R2. In this paper it is proved that if K is strictly convex L(TK) is 1-connected.},
+	author = {Bloch, Ethan D.},
+	date-added = {2025-03-31 11:59:07 -0500},
+	date-modified = {2025-03-31 11:59:23 -0500},
+	doi = {https://doi.org/10.1016/0166-8641(87)90078-2},
+	issn = {0166-8641},
+	journal = {Topology and its Applications},
+	number = {1},
+	pages = {93-101},
+	title = {Simplexwise linear near-embeddings of a 2-disk into {$R^2$}. {II}},
+	url = {https://www.sciencedirect.com/science/article/pii/0166864187900782},
+	volume = {25},
+	year = {1987},
+	bdsk-url-1 = {https://www.sciencedirect.com/science/article/pii/0166864187900782},
+	bdsk-url-2 = {https://doi.org/10.1016/0166-8641(87)90078-2}}
+
+@article{b-scsle-85,
+	author = {Bloch, Ethan D.},
+	date-added = {2025-03-31 11:55:35 -0500},
+	date-modified = {2025-03-31 11:57:27 -0500},
+	doi = {10.1090/S0002-9947-1985-0776399-X},
+	journal = {Trans. Amer. Math. Soc.},
+	number = {2},
+	pages = {723--737},
+	title = {Strictly convex simplexwise linear embeddings of a 2-disk},
+	volume = {288},
+	year = {1985},
+	bdsk-url-1 = {https://doi.org/10.1090/S0002-9947-1985-0776399-X}}
+
+@article{c-svgcs-41,
+	author = {Cairns, Stewart S.},
+	date-added = {2025-03-31 10:11:05 -0500},
+	date-modified = {2025-03-31 10:13:17 -0500},
+	doi = {10.1090/S0002-9904-1941-07525-7},
+	journal = {Bull. Amer. Math. Soc.},
+	pages = {711},
+	title = {The space of a variable geodesic complex on a sphere},
+	volume = {47},
+	year = {1941},
+	bdsk-url-1 = {https://doi.org/10.1090/S0002-9904-1941-07525-7}}
+
+@article{w-ki2-82,
+	author = {Wunderlich, Walter},
+	date-added = {2025-03-30 14:01:54 -0500},
+	date-modified = {2025-03-30 14:23:02 -0500},
+	doi = {10.5169/seals-36393},
+	journal = {Elem. Math.},
+	keywords = {shaky polyhedron},
+	pages = {84--89},
+	title = {Kipp-{Ikosaeder} {II}},
+	url = {http://eudml.org/doc/141288},
+	volume = {37},
+	year = {1982},
+	bdsk-url-1 = {http://eudml.org/doc/141288},
+	bdsk-url-2 = {https://doi.org/10.5169/seals-36393}}
+
+@article{m-lbrcp-94,
+	author = {Milka, Anatoliy D.},
+	date-added = {2025-03-30 12:10:37 -0500},
+	date-modified = {2025-03-30 12:11:52 -0500},
+	fjournal = {Matematicheskaya Fizika, Analiz, Geometriya. Khar\cprime kovski\u i\ Matematicheski\u i\ Zhurnal},
+	issn = {1027-1767},
+	journal = {Mat. Fiz. Anal. Geom.},
+	mrclass = {52C25},
+	mrnumber = {1483801},
+	note = {In Russian. Cited in \cite{gk-mfjoi-16}},
+	number = {1},
+	pages = {116--130},
+	title = {Linear bendings of regular convex polyhedra},
+	volume = {1},
+	year = {1994}}
+
+@article{gk-mfjoi-16,
+	abstract = {The Jessen orthogonal icosahedron is known to be non-flexible however its physical models behave like physical models of flexible polyhedra. Adapting ideas of Milka, we propose two mathematical approaches for explaining the flexibility of physical models of the Jessen orthogonal icosahedron.},
+	author = {Gorkavyy, Vasyl and Kalinin, Dmytro},
+	date = {2016/09/01},
+	date-added = {2025-03-30 11:43:12 -0500},
+	date-modified = {2025-03-30 14:26:36 -0500},
+	doi = {10.1007/s13366-016-0287-5},
+	id = {Gorkavyy2016},
+	isbn = {2191-0383},
+	journal = {Beitr. Algebra Geom.},
+	number = {3},
+	pages = {607--622},
+	title = {On model flexibility of the {Jessen} orthogonal icosahedron},
+	volume = {57},
+	year = {2016},
+	bdsk-url-1 = {https://doi.org/10.1007/s13366-016-0287-5}}
+
+@article{w-skwba-65,
+	author = {Wunderlich, Walter},
+	date-added = {2025-03-30 09:47:02 -0500},
+	date-modified = {2025-03-30 14:17:14 -0500},
+	doi = {10.5169/seals-23921},
+	journal = {Elem. Math.},
+	keywords = {Kippoktaeder, Sch{\"o}nhardt polyhedron},
+	number = {2},
+	pages = {25--32},
+	title = {Starre, kippende, wackelige und bewegliche {Achtflache}},
+	volume = {XX},
+	year = {1965},
+	bdsk-url-1 = {https://doi.org/10.5169/seals-23921}}
+
+@article{w-skwbg-71,
+	author = {Wunderlich, Walter},
+	date-added = {2025-03-30 09:37:33 -0500},
+	date-modified = {2025-03-30 14:23:37 -0500},
+	doi = {10.5169/seals-28067},
+	journal = {Elem. Math.},
+	keywords = {Sch{\"o}nhardt polyhedron, shaky polyhedron},
+	number = {4},
+	pages = {73-83},
+	title = {Starre, kippende, wackelige und bewegliche {Gelenkvierecke} im {Raum}},
+	url = {http://eudml.org/doc/141017},
+	volume = {26},
+	year = {1971},
+	bdsk-url-1 = {http://eudml.org/doc/141017}}
+
+@article{g-ups-78,
+	author = {Goldberg, Michael},
+	date-added = {2025-03-30 09:34:19 -0500},
+	date-modified = {2025-03-30 14:25:36 -0500},
+	doi = {10.1080/0025570X.1978.11976701},
+	eprint = {https://doi.org/10.1080/0025570X.1978.11976701},
+	journal = {Math. Mag.},
+	number = {3},
+	pages = {165--170},
+	publisher = {Taylor \& Francis},
+	title = {Unstable Polyhedral Structures},
+	volume = {51},
+	year = {1978},
+	bdsk-url-1 = {https://doi.org/10.1080/0025570X.1978.11976701}}
+
+@article{bc-np-16,
+	abstract = {Triangulations of 3-dimensional polyhedron are partitions of the polyhedron with tetrahedra in a face-to-face fashion without introducing new vertices. Sch{\"o}nhardt (Math. Ann. 89:309--312, 1927), Bagemihl (Amer. Math. Mon. 55:411--413, 1948), Kuperberg (Personal communication 2011) and others constructed special polyhedra in such a way that clever one line geometric reasons imply nontriangulability. Rambau (Comb. Comput. Geom. 52:501--516, 2005) proved that twisted prisms over n-gons are nontriangulable. Our approach for proving polyhedra are nontriangulable is to show that partitions with tetrahedra, which we call tilings, do not exist even if the face-to-face-restriction is relaxed. First we construct a polyhedron which is tileable but is not triangulable. Then we revisit Rambau type twisted prisms. In fact we consider a slightly different class of polyhedra, and prove that these new twisted prisms are nontileable, thus are nontriangulable. We also show that one can twist the regular dodecahedron so that it becomes nontileable, which is abstracted to a new family of nontileable polyhedra, called nonconvex twisted pentaprisms.},
+	author = {Bezdek, Andras and Carrigan, Braxton},
+	date = {2016/03/01},
+	date-added = {2025-03-29 19:11:47 -0500},
+	date-modified = {2025-03-29 19:12:02 -0500},
+	doi = {10.1007/s13366-015-0248-4},
+	id = {Bezdek2016},
+	isbn = {2191-0383},
+	journal = {Beitr. Algebra Geom.},
+	number = {1},
+	pages = {51--66},
+	title = {On nontriangulable polyhedra},
+	volume = {57},
+	year = {2016},
+	bdsk-url-1 = {https://doi.org/10.1007/s13366-015-0248-4}}
+
+@article{tuv-mvep-23,
+	abstract = {We prove that, given a polyhedron {\$}{\$}{\{}{$\backslash$}mathcal {\{}P{\}}{\}}{\$}{\$}in {\$}{\$}{\{}{$\backslash$}mathbb {\{}R{\}}{\}}\^{}3{\$}{\$}, every point in {\$}{\$}{\{}{$\backslash$}mathbb {\{}R{\}}{\}}\^{}3{\$}{\$}that does not see any vertex of {\$}{\$}{\{}{$\backslash$}mathcal {\{}P{\}}{\}}{\$}{\$}must see eight or more edges of {\$}{\$}{\{}{$\backslash$}mathcal {\{}P{\}}{\}}{\$}{\$}, and this bound is tight. More generally, this remains true if {\$}{\$}{\{}{$\backslash$}mathcal {\{}P{\}}{\}}{\$}{\$}is any finite arrangement of internally disjoint polygons in {\$}{\$}{\{}{$\backslash$}mathbb {\{}R{\}}{\}}\^{}3{\$}{\$}. We also prove that every point in {\$}{\$}{\{}{$\backslash$}mathbb {\{}R{\}}{\}}\^{}3{\$}{\$}can see six or more edges of {\$}{\$}{\{}{$\backslash$}mathcal {\{}P{\}}{\}}{\$}{\$}(possibly only the endpoints of some these edges) and every point in the interior of {\$}{\$}{\{}{$\backslash$}mathcal {\{}P{\}}{\}}{\$}{\$}can see a positive portion of at least six edges of {\$}{\$}{\{}{$\backslash$}mathcal {\{}P{\}}{\}}{\$}{\$}. These bounds are also tight.},
+	arxiv = {2208.09702},
+	author = {T{\'o}th, Csaba D. and Urrutia, Jorge and Viglietta, Giovanni},
+	date = {2023/09/14},
+	date-added = {2025-03-29 18:44:38 -0500},
+	date-modified = {2025-03-29 18:45:55 -0500},
+	doi = {10.1007/s00373-023-02707-y},
+	id = {T{\'o}th2023},
+	isbn = {1435-5914},
+	journal = {Graphs Combin.},
+	number = {5},
+	pages = {111},
+	title = {Minimizing Visible Edges in Polyhedra},
+	volume = {39},
+	year = {2023},
+	bdsk-url-1 = {https://doi.org/10.1007/s00373-023-02707-y}}
+
+@misc{v-masg-24,
+	arxiv = {2311.03255},
+	author = {Viglietta, Giovanni},
+	date-added = {2025-03-29 17:55:22 -0500},
+	date-modified = {2025-03-29 17:55:51 -0500},
+	howpublished = {Preprint},
+	month = {Nov.},
+	title = {Minimal Arrangements of Spherical Geodesics},
+	year = {2024}}
+
+@article{v-tsd-23,
+	abstract = {We introduce the axiomatic theory of spherical occlusion diagrams as a tool to study certain combinatorial properties of polyhedra in $R^3$, which are of central interest in the context of Art Gallery problems for polyhedra and other visibility-related problems in discrete and computational geometry.},
+	arxiv = {2107.05895},
+	author = {Viglietta, Giovanni},
+	date-added = {2025-03-29 17:52:23 -0500},
+	date-modified = {2025-03-29 18:44:36 -0500},
+	doi = {10.57717/cgt.v2i2.30},
+	journal = {Comput. Geom. Topology},
+	number = {2},
+	pages = {2:1--2:24},
+	title = {A Theory of Spherical Diagrams},
+	volume = {2},
+	year = {2023},
+	bdsk-url-1 = {https://doi.org/10.57717/cgt.v2i2.30}}
+
+@article{g-cgsq-23,
+	abstract = {Generic spherical quadrilaterals are classified up to isometry. Condition of genericity consists in the requirement that the images of the sides under the developing map belong to four distinct circles which have no triple intersections. Under this condition, it is shown that the space of quadrilaterals with prescribed angles consists of finitely many open curves. Degeneration at the endpoints of these curves is also determined.},
+	author = {Gabrielov, Andrei},
+	date-added = {2025-03-29 17:43:17 -0500},
+	date-modified = {2025-03-29 17:43:32 -0500},
+	doi = {10.1007/s40598-022-00204-3},
+	journal = {Arnold Math. J.},
+	number = {2},
+	pages = {151--203},
+	title = {Classification of Generic Spherical Quadrilaterals},
+	volume = {9},
+	year = {2023},
+	bdsk-url-1 = {https://doi.org/10.1007/s40598-022-00204-3}}
+
+@misc{a-sfs-22,
+	arxiv = {2209.04738},
+	author = {Abawonse, Olakunle S.},
+	comments = {Realization space of flat (d+2)-vertex triangulations of the d-sphere is homotopy equivalent to O(d+1)},
+	date-added = {2025-03-29 17:39:01 -0500},
+	date-modified = {2025-03-29 17:42:30 -0500},
+	howpublished = {Preprint},
+	month = {Sept.},
+	title = {Spaces of flattenings of spheres},
+	year = {2022}}
+
+@article{m-ccfpc-94,
+	abstract = {This paper carries out an explicit computation of the combinatorial formula of Gabrielov, Gel'fand, and Losik for the first Pontryagin class of the complex projective plane with the 9-vertex triangulation discovered by Wolfgang K{\"u}hnel. The conditions of the original formula must be modified since the 8-vertex triangulation of the 3-sphere link of each vertex cannot be realized as the complex of faces of a convex polytope in 4-space, but it can be so realized by a star-shaped polytope, and the space of all such realizations is not connected.},
+	author = {Milin, Lazar},
+	comments = {The PL-realization space of a triangulation of the 3-sphere can be disconnected.},
+	date-added = {2025-03-29 17:21:36 -0500},
+	date-modified = {2025-03-29 17:28:29 -0500},
+	doi = {10.1007/BF01264030},
+	journal = {Geom. Dedicata},
+	number = {3},
+	pages = {253--291},
+	title = {A combinatorial computation of the first Pontryagin class of the complex projective plane},
+	volume = {49},
+	year = {1994},
+	bdsk-url-1 = {https://doi.org/10.1007/BF01264030}}
+
+@article{bw-pwdbc-92,
+	author = {Brown, Jeffrey L. and Worsey, Andrew J.},
+	date-added = {2025-03-28 17:48:24 -0500},
+	date-modified = {2025-03-28 17:54:16 -0500},
+	journal = {ESAIM: Mod{\'e}lisation math{\'e}matique et analyse num{\'e}rique, Topics in computer aided geometric design},
+	number = {1},
+	pages = {37--49},
+	title = {Problems with defining barycentric coordinates for the sphere},
+	url = {https://www.numdam.org/item/M2AN_1992__26_1_37_0/},
+	volume = {26},
+	year = {1992},
+	bdsk-url-1 = {https://www.numdam.org/item/M2AN_1992__26_1_37_0/}}
+
+@article{f-gbca-15,
+	author = {Floater, Michael S.},
+	date-added = {2025-03-28 17:41:59 -0500},
+	date-modified = {2025-03-28 17:42:05 -0500},
+	doi = {10.1017/S0962492914000129},
+	journal = {Acta Numerica},
+	pages = {161--214},
+	title = {Generalized barycentric coordinates and applications},
+	volume = {24},
+	year = {2015},
+	bdsk-url-1 = {https://doi.org/10.1017/S0962492914000129}}
+
+@article{lm-ctwmn-20,
+	abstract = {Two vertex-labelled polygons are compatible if they have the same clockwise cyclic ordering of vertices. The definition extends to polygonal regions (polygons with holes) and to triangulations---for every face, the clockwise cyclic order of vertices on the boundary must be the same. It is known that every pair of compatible n-vertex polygonal regions can be extended to compatible triangulations by adding O(n2) Steiner points. Furthermore, Ω(n2) Steiner points are sometimes necessary, even for a pair of polygons. Compatible triangulations provide piecewise linear homeomorphisms and are also a crucial first step in morphing planar graph drawings, aka ``2D shape animation.'' An intriguing open question, first posed by Aronov, Seidel, and Souvaine in 1993, is to decide if two compatible polygons have compatible triangulations with at most k Steiner points. In this paper we prove the problem to be NP-hard for polygons with holes. The question remains open for simple polygons.},
+	arxiv = {1706.09086},
+	author = {Lubiw, Anna and Mondal, Debajyoti},
+	date-added = {2025-03-18 17:50:12 -0500},
+	date-modified = {2025-03-18 17:50:45 -0500},
+	doi = {10.1016/j.tcs.2020.06.014},
+	journal = {Theor. Comput. Sci.},
+	keywords = {Polygonal regions, Compatible triangulations, NP-hard, Linear homeomorphisms},
+	pages = {97--107},
+	title = {On compatible triangulations with a minimum number of Steiner points},
+	volume = {835},
+	year = {2020},
+	bdsk-url-1 = {https://www.sciencedirect.com/science/article/pii/S0304397520303546},
+	bdsk-url-2 = {https://doi.org/10.1016/j.tcs.2020.06.014}}
+
+@article{s-thzr-1883,
+	author = {Schlegel, Victor},
+	date-added = {2025-03-18 16:07:58 -0500},
+	date-modified = {2025-03-18 16:27:50 -0500},
+	journal = {Nova Acta, Ksl. Leop.-Carol. Deutsche Akademie der Naturforscher},
+	number = {4},
+	title = {Theorie der homogen zusammengesetzten {Raumgebilde}},
+	volume = {XLIV},
+	year = {1883}}
+
+@book{b-gs-1495,
+	address = {Paris},
+	author = {Bradwardine, Thomas},
+	date-added = {2025-03-16 15:05:09 -0500},
+	date-modified = {2025-03-16 15:23:11 -0500},
+	note = {Written circa 1335},
+	publisher = {Guy Marchant},
+	title = {Geometria Speculativa},
+	year = {1495}}
+
+@article{i-sttg-49,
+	author = {Iwasawa, Kenkichi},
+	date-added = {2025-03-16 14:16:30 -0500},
+	date-modified = {2025-03-16 14:59:47 -0500},
+	doi = {10.2307/1969548},
+	journal = {Ann. Math.},
+	keywords = {KAN decomposition},
+	number = {3},
+	pages = {507--558},
+	read = {1},
+	title = {On Some Types of Topological Groups},
+	volume = {50},
+	year = {1949},
+	bdsk-url-1 = {https://doi.org/10.2307/1969548}}
+
+@inproceedings{cdf-fsdte-18,
 	author = {Castelli Aleardi, Luca and Denis, Gaspard and Fusy, {\'E}ric},
 	booktitle = {Proc. 17th Int. Symp Experimental Algorithms},
 	date-added = {2024-12-02 22:00:17 -0600},
-	date-modified = {2024-12-02 22:01:54 -0600},
+	date-modified = {2025-03-29 17:46:44 -0500},
 	doi = {10.4230/LIPICS.SEA.2018.24},
 	editor = {D'Angelo, Gianlorenzo},
 	pages = {24:1--24:14},
@@ -20,7 +368,8 @@
 	series = {Leibniz Int. Proc. Informatics},
 	title = {Fast Spherical Drawing of Triangulations: An Experimental Study of Graph Drawing Tools},
 	volume = {103},
-	year = {2018}}
+	year = {2018},
+	bdsk-url-1 = {https://doi.org/10.4230/LIPICS.SEA.2018.24}}
 
 @article{o-cgc51-08,
 	abstract = {Can a simple spherical polygon always be triangulated? The answer depends on the definitions of "polygon" and "triangulate".Define a spherical polygon to be a simple, closed curve on a sphere S composed of a finite number of great circle arcs (also known as geodesic arcs) meeting at vertices. Can every spherical polygon be triangulated? Figure 1 shows an example of what is intended.1 The planar analog is well-known and a cornerstone of computational geometry: the interior of every planar simple polygon can be triangulated (and efficiently so). The situation for spherical polygons is not so straightforward. There are three complications.},
@@ -78,11 +427,11 @@
 	abstract = { A finite set of lines partitions the Euclidean plane into a cell complex. Similarly, a finite set of \$(d - 1)\$-dimensional hyperplanes partitions d-dimensional Euclidean space. An algorithm is presented that constructs a representation for the cell complex defined by n hyperplanes in optimal \$O(n^d )\$ time in d dimensions. It relies on a combinatorial result that is of interest in its own right. The algorithm is shown to lead to new methods for computing \$\lambda \$-matrices, constructing all higher-order Voronoi diagrams, halfspatial range estimation, degeneracy testing, and finding minimum measure simplices. In all five applications, the new algorithms are asymptotically faster than previous results, and in several cases are the only known methods that generalize to arbitrary dimensions. The algorithm also implies an upper bound of \$2^{cn^d } \$, c a positive constant, for the number of combinatorially distinct arrangements of n hyperplanes in \$E^d \$. },
 	author = {Edelsbrunner, Herbert and O'Rourke, Joseph and Seidel, Raimund},
 	date-added = {2024-11-30 21:05:50 -0600},
-	date-modified = {2024-12-01 14:28:06 -0600},
+	date-modified = {2025-04-01 14:20:00 -0500},
 	doi = {10.1137/0215024},
-	journal = {SIAM Journal on Computing},
+	journal = {SIAM J. Comput.},
 	number = {2},
-	pages = {341-363},
+	pages = {341--363},
 	title = {Constructing Arrangements of Lines and Hyperplanes with Applications},
 	volume = {15},
 	year = {1986},
@@ -115,10 +464,6 @@
 	year = {1985},
 	bdsk-url-1 = {https://doi.org/10.1007/BF01934990}}
 
-@book{cite-key,
-	date-added = {2024-11-30 20:58:43 -0600},
-	date-modified = {2024-11-30 20:58:47 -0600}}
-
 @article{cl-cacsa-09,
 	abstract = {Balls and spheres are the simplest modeling primitives after affine ones, which accounts for their ubiquitousness in Computer Science and Applied Mathematics. Amongst the many applications, we may cite their prevalence when it comes to modeling our ambient 3D space, or to handle molecular shapes using Van der Waals models. If most of the applications developed so far are based upon simple geometric tests between balls, in particular the intersection test, a number of applications would obviously benefit from finer pieces of information. Consider a sphere S0 and a list of circles on it, each such circle stemming from the intersection between S0 and another sphere, say Si. Also assume that Si has an accompanying ball Bi. This paper develops an integrated framework, based on the generalization of the Bentley--Ottmann algorithm to the spherical setting, to (i) compute the exact arrangement of circles on S0 (ii) construct in a single pass the half-edge data structure encoding the arrangement induced by the circles (iii) report the covering list of each face of this arrangement, i.e. the list of balls containing it. As an illustration, the covering lists are used as the building block of a geometric optimization algorithm aiming at selecting diverse conformational ensembles for flexible protein--protein docking.},
 	author = {Cazals, Fr{\'e}d{\'e}ric and Loriot, S{\'e}bastien},
@@ -139,11 +484,11 @@
 	author = {Cazals, Fr{\'e}d{\'e}ric and Loriot, S{\'e}bastien},
 	booktitle = {Proc. 23rd Ann. Symp. Comput. Geom.},
 	date-added = {2024-11-30 20:50:38 -0600},
-	date-modified = {2024-11-30 20:55:14 -0600},
+	date-modified = {2025-03-28 17:59:31 -0500},
 	doi = {10.1145/1247069.1247088},
 	keywords = {structural biology, robust geometric software, molecular surfaces, arrangements, Van der Waals models},
 	pages = {119--120},
-	title = {Computing the exact arrangement of circles on a sphere, with applications in structural biology: video},
+	title = {Computing the exact arrangement of circles on a sphere, with applications in structural biology: {Video}},
 	year = {2007},
 	bdsk-url-1 = {https://doi.org/10.1145/1247069.1247088}}
 
@@ -201,8 +546,9 @@
 	abstract = {The set of compatibleC^{\infty }-differential structures or smoothings on a triangulated or combinatorial manifoldXcan be divided into equivalence classes according to several equivalence relations. The weakest and most important of these relations isdiffeomorphy. Two smoothingsD0andD1are diffeomorphic if the correspondingC^{\infty }-manifolds are diffeomorphic. The strongest equivalence, after equality, ishomotopy. Under our definition, homotopy is equivalent to the existence of an intervalIof piecewiseC^{\infty }-Imbeddings ofXwith fixed triangulation onto someC^{\infty }-manifoldY, such that the initial and final imbedding carry (dually) the smoothing ofYontoD0},
 	author = {Kuiper, Nicolass H.},
 	booktitle = {Differential and Combinatorial Topology: A Symposium in Honor of Marston Morse},
+	comments = {The realization space of the boundary of a d-simplex as a flat triangulation of S^d is homotopy-equivalent to O(d+1)},
 	date-added = {2024-11-29 19:14:59 -0600},
-	date-modified = {2024-11-29 19:16:08 -0600},
+	date-modified = {2025-03-29 17:38:52 -0500},
 	keywords = {morphing},
 	pages = {3--22},
 	publisher = {Princeton University Press},
@@ -1670,9 +2016,9 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	bdsk-url-1 = {https://doi.org/10.1016/j.disc.2005.09.037}}
 
 @article{j-oi-67,
-	author = {Jessen, Borge},
+	author = {Jessen, B{\o}rge},
 	date-added = {2023-03-04 06:36:47 -0600},
-	date-modified = {2023-03-04 06:38:20 -0600},
+	date-modified = {2025-03-30 11:35:33 -0500},
 	journal = {Nordisk Matematisk Tidskrift},
 	number = {2/3},
 	pages = {90--96},
@@ -1685,10 +2031,10 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 @article{d-sb-71,
 	author = {Douady, Adrien},
 	date-added = {2023-03-04 06:15:11 -0600},
-	date-modified = {2023-03-04 06:27:50 -0600},
+	date-modified = {2025-03-19 12:52:38 -0500},
 	journal = {Bull. APMEP},
 	pages = {699--701},
-	title = {Le shaddock {\'a} six becs},
+	title = {Le shaddock {\`a} six becs},
 	url = {https://www.apmep.fr/IMG/pdf/AAA71038.pdf},
 	volume = {281},
 	year = {1971},
@@ -1781,9 +2127,9 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 @inproceedings{befklow-mpgdt-23,
 	arxiv = {2210.05384},
 	author = {Buchin, Kevin and Evans, William S. and Frati, Fabrizio and Kostitsyna, Irina and L{\"{o}}ffler, Maarten and Ophelders, Tim and Wolff, Alexander},
-	booktitle = {Proc. 48th Int Conf. Current Trends in Theory and Practice Comput. Sci. (SOFSEM)},
+	booktitle = {Proc. 48th Int. Conf. Current Trends in Theory and Practice Comput. Sci. (SOFSEM)},
 	date-added = {2023-02-09 12:04:45 -0600},
-	date-modified = {2023-03-04 06:09:52 -0600},
+	date-modified = {2025-03-31 14:20:41 -0500},
 	doi = {10.1007/978-3-031-23101-8\_6},
 	pages = {80--95},
 	publisher = {Springer},
@@ -3668,11 +4014,11 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 @article{r-sapgp-76,
 	author = {Rosenstiehl, Pierre},
 	date-added = {2023-02-07 09:06:46 -0600},
-	date-modified = {2023-02-07 09:08:21 -0600},
+	date-modified = {2025-03-31 12:54:29 -0500},
 	journal = {C. R. Acad. Sci. Paris A},
 	pages = {551--553},
 	title = {Solution alg{\'e}brique du probl{\`e}me de Gauss sur la permutation des points d'intersection d'une ou plusieurs courbes ferm{\'e}es du plan.},
-	url = {https://gallica.bnf.fr/ark:/12148/bpt6k62355157/f563.item#},
+	url = {https://gallica.bnf.fr/ark:/12148/bpt6k62355157/f563.item},
 	volume = {283},
 	year = {1976},
 	bdsk-url-1 = {https://gallica.bnf.fr/ark:/12148/bpt6k62355157/f563.item#}}
@@ -3835,10 +4181,11 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	author = {Klemz, Boris},
 	booktitle = {Proc. 29th Ann. Europ. Symp. Algorithms},
 	date-added = {2021-08-20 11:34:24 -0500},
-	date-modified = {2023-02-21 11:33:47 -0600},
+	date-modified = {2025-03-30 14:29:51 -0500},
 	doi = {10.4230/LIPIcs.ESA.2021.57},
 	number = {204},
 	pages = {57:1--57:15},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
 	series = {Leibniz Int. Proc. Informatics},
 	title = {Convex drawings of hierarchical graphs in linear time, with applications to planar graph morphing},
 	year = {2021},
@@ -4066,15 +4413,15 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 @article{kl-mpgss-06,
 	author = {Kobourov, Stephen G. and Landis, Matthew},
 	date-added = {2021-06-05 14:56:39 -0500},
-	date-modified = {2021-06-05 14:57:32 -0500},
-	doi = {0.7155/jgaa.00162},
+	date-modified = {2025-03-19 12:20:38 -0500},
+	doi = {10.7155/jgaa.00162},
 	journal = {J. Graph Algorithms Appl.},
 	number = {1},
 	pages = {113--127},
 	title = {Morphing planar graphs in spherical space},
 	volume = {12},
 	year = {2006},
-	bdsk-url-1 = {https://doi.org/0.7155/jgaa.00162}}
+	bdsk-url-1 = {https://doi.org/10.7155/jgaa.00162}}
 
 @article{sg-imct-03,
 	author = {Surazhsky, Vitaly and Gotsman, Craig},
@@ -4249,13 +4596,13 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 @article{ls-nscvm-99,
 	author = {Lov{\'a}sz, L{\'a}szl{\'o} and Schrijver, Alexander},
 	date-added = {2020-12-31 10:41:20 -0600},
-	date-modified = {2020-12-31 10:42:38 -0600},
+	date-modified = {2025-03-28 17:59:16 -0500},
 	doi = {10.5802/aif.1703},
 	journal = {Ann. Inst. Fourier},
 	keywords = {Steinitz embedding},
 	number = {3},
 	pages = {1017--1026},
-	title = {On the null space ofa {Colin de Verdi{\`e}re} matrix},
+	title = {On the null space of a {Colin de Verdi{\`e}re} matrix},
 	volume = {49},
 	year = {1999},
 	bdsk-url-1 = {https://doi.org/10.5802/aif.1703}}
@@ -13263,8 +13610,8 @@ Theorem 2. Suppose G is a critical circular planar resistor network.  The values
 @article{sh-pt-99,
 	author = {Shih, Wei-Kuan and Hsu, Wen-Lian},
 	date-added = {2014-07-20 15:07:30 +0000},
-	date-modified = {2014-07-20 15:07:30 +0000},
-	journal = {Theoret. Comput. Sci.},
+	date-modified = {2025-03-18 17:51:04 -0500},
+	journal = {Theor. Comput. Sci.},
 	number = {1--2},
 	pages = {179--191},
 	title = {A new planarity test},
@@ -17250,9 +17597,9 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @article{c-age-97,
 	author = {Chen, Jianer},
 	date-added = {2012-03-09 17:13:49 +0000},
-	date-modified = {2019-08-17 14:18:43 -0500},
+	date-modified = {2025-03-18 17:51:17 -0500},
 	doi = {10.1016/S0304-3975(96)00273-3},
-	journal = {Theoret. Comput. Sci.},
+	journal = {Theor. Comput. Sci.},
 	keywords = {data structure, doubly linked face-list},
 	number = {2},
 	pages = {247--266},
@@ -18444,7 +18791,7 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @article{m-ttme-95,
 	author = {Merton, Robert K.},
 	date-added = {2012-01-31 13:40:27 +0000},
-	date-modified = {2012-01-31 13:50:15 +0000},
+	date-modified = {2025-03-31 13:37:04 -0500},
 	journal = {Social Forces},
 	number = {2},
 	pages = {379--422},
@@ -18470,26 +18817,31 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @article{m-mes2-88,
 	author = {Merton, Robert K.},
 	date-added = {2012-01-31 13:06:36 +0000},
-	date-modified = {2012-01-31 13:40:08 +0000},
+	date-modified = {2025-03-31 13:38:02 -0500},
+	doi = {10.1086/354848},
 	journal = {ISIS},
 	pages = {606--623},
 	read = {1},
 	title = {The {Matthew} Effect in science, {II}: Cumulative Advantage and the Symbolism of Intellectual Property},
 	volume = {79},
-	year = {1988}}
+	year = {1988},
+	bdsk-url-1 = {https://doi.org/10.1086/354848}}
 
 @article{mz-mes-68,
-	author = {Zuckerman], Robert K. Merton [and Haniet},
+	author = {Zuckerman], Robert K. Merton [and Harriet},
 	date-added = {2012-01-31 13:04:05 +0000},
-	date-modified = {2012-01-31 13:49:51 +0000},
+	date-modified = {2025-03-31 13:39:00 -0500},
+	doi = {10.1126/science.159.3810.56},
 	journal = {Science},
+	key = {Merton, Robert K. and Zuckerman, Harriet},
 	note = {Reprinted in Robert Merton, \emph{The Sociology of Science}, 439--459, 1973, Univ. Chicago Press},
 	number = {3810},
 	pages = {56--93},
 	read = {1},
 	title = {The {Matthew} Effect in science},
 	volume = {159},
-	year = {1968}}
+	year = {1968},
+	bdsk-url-1 = {https://doi.org/10.1126/science.159.3810.56}}
 
 @article{j-rpsm-1868,
 	author = {Jordan, Camille},
@@ -19560,7 +19912,7 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @article{m-ebg-78,
 	author = {Molland, A. George},
 	date-added = {2011-12-12 10:04:34 +0000},
-	date-modified = {2011-12-12 10:21:52 +0000},
+	date-modified = {2025-03-16 15:23:13 -0500},
 	journal = {Arch. History Exact Sci.},
 	number = {2},
 	pages = {113--175},
@@ -20344,9 +20696,9 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @article{mp-fitcp-78,
 	author = {Muller, David E. and Preparata, Franco P.},
 	date-added = {2011-11-12 05:56:03 +0000},
-	date-modified = {2019-08-17 14:21:10 -0500},
+	date-modified = {2025-03-18 17:51:12 -0500},
 	doi = {10.1016/0304-3975(78)90051-8},
-	journal = {Theoret. Comput. Sci.},
+	journal = {Theor. Comput. Sci.},
 	keywords = {DCEL},
 	pages = {217--236},
 	title = {Finding the intersection of two convex polyhedra},
@@ -21595,8 +21947,8 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @article{r-alfag-03,
 	author = {Rytter, Wojciech},
 	date-added = {2011-07-06 22:22:46 -0500},
-	date-modified = {2012-05-06 20:21:55 +0000},
-	journal = {Theoret. Comput. Sci.},
+	date-modified = {2025-03-18 17:51:07 -0500},
+	journal = {Theor. Comput. Sci.},
 	pages = {211--222},
 	read = {1},
 	title = {Application of {Lempel-Ziv} factorization to the approximation of grammar-based compression},
@@ -21629,9 +21981,9 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 
 @inproceedings{rd-qwe-99a,
 	author = {Robson, John M. and Diekert, Volker},
-	booktitle = {Proc. 16th Ann. Conf. Theoretical Aspects Comput. Sci.},
+	booktitle = {Proc. 16th Ann. Symp. Theoretical Aspects Comput. Sci.},
 	date-added = {2011-07-06 20:24:25 -0500},
-	date-modified = {2011-12-31 20:01:54 +0000},
+	date-modified = {2025-03-18 17:53:14 -0500},
 	pages = {217--226},
 	publisher = {Springer-Verlag},
 	read = {1},
@@ -21704,9 +22056,9 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	author = {Indermitte, Clause and Liebling, Thomas M. and Troyanov, Marc and Clemen{\c c}on, Heinz},
 	comment = {MOSTLY proves termination of flip algorithm, doesn't cite earier papers},
 	date-added = {2011-06-02 23:29:27 -0500},
-	date-modified = {2019-12-03 15:39:31 -0600},
+	date-modified = {2025-03-18 17:51:14 -0500},
 	doi = {10.1016/S0304-3975(00)00248-6},
-	journal = {Theoret. Comput. Sci.},
+	journal = {Theor. Comput. Sci.},
 	keywords = {intrinsic Delaunay},
 	number = {{1--2}},
 	pages = {263--274},
@@ -23275,7 +23627,7 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	author = {Borradaile, Glencora and Demaine, Erik D. and Tazari, Siamak},
 	booktitle = {Proc. 26th Int. Symp. Theoretical Aspects Comput. Sci.},
 	date-added = {2010-07-07 11:59:30 -0500},
-	date-modified = {2019-08-24 16:12:40 -0500},
+	date-modified = {2025-03-18 17:55:13 -0500},
 	doi = {10.4230/LIPIcs.STACS.2009.1835},
 	pages = {171--182},
 	publisher = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
@@ -24166,8 +24518,8 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @article{rv-rgpam-76,
 	author = {Rivest, Ron L. and Vuillemin, Jean},
 	date-added = {2009-11-18 20:42:32 -0600},
-	date-modified = {2012-03-27 13:18:08 +0000},
-	journal = {Theoret. Comput. Sci.},
+	date-modified = {2025-03-18 17:51:09 -0500},
+	journal = {Theor. Comput. Sci.},
 	pages = {371--384},
 	read = {1},
 	title = {On recognizing graph properties from adjacency matrices},
@@ -25628,8 +25980,8 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @article{b-pkagb-98,
 	author = {Bodlaender, Hans L.},
 	date-added = {2009-10-21 15:50:29 -0500},
-	date-modified = {2012-05-06 20:25:15 +0000},
-	journal = {Theoret. Comput. Sci.},
+	date-modified = {2025-03-18 17:51:20 -0500},
+	journal = {Theor. Comput. Sci.},
 	keywords = {treewidth},
 	pages = {1--45},
 	read = {1},
@@ -26542,9 +26894,9 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 
 @inproceedings{m-cqmsa-96,
 	author = {Mitchell, Scott A.},
-	booktitle = {Proc. 13th Ann. Symp. Theoret. Aspects Comput. Sci.},
+	booktitle = {Proc. 13th Ann. Symp. Theoretical Aspects Comput. Sci.},
 	date-added = {2009-09-10 18:05:36 -0500},
-	date-modified = {2012-04-03 12:19:56 +0000},
+	date-modified = {2025-03-18 17:53:54 -0500},
 	pages = {456--476},
 	publisher = {Springer-Verlag},
 	read = {1},
@@ -27248,9 +27600,9 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 
 @inproceedings{cf-qhc-08,
 	author = {Chen, Chao and Freedman, Daniel},
-	booktitle = {Proc. 25th Ann. Symp. Theoretical Aspects Comput. Sci.},
+	booktitle = {Proc. 25th Int. Symp. Theoretical Aspects Comput. Sci.},
 	date-added = {2008-07-14 21:27:38 -0500},
-	date-modified = {2017-10-06 18:07:23 +0000},
+	date-modified = {2025-03-18 17:55:43 -0500},
 	doi = {10.4230/LIPIcs.STACS.2008.1343},
 	number = {08001},
 	pages = {169--180},
